+ add separate features for 'Party Join and Leave messages'
= fix stuff related to 'Community Goal Display'